@@ -104,7 +104,8 @@ void JobsActionsPanel::on_pushButton_run_clicked(bool)
   
   for (size_t i = 0; i < commands.size(); i++)
   {
-    CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    //CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    ccx_iface->cmd(commands[int(i)].toStdString());
   }
 }
 
@@ -126,7 +127,8 @@ void JobsActionsPanel::on_pushButton_kill_clicked(bool)
   
   for (size_t i = 0; i < commands.size(); i++)
   {
-    CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    //CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    ccx_iface->cmd(commands[int(i)].toStdString());
   }
 }
 
@@ -148,7 +150,8 @@ void JobsActionsPanel::on_pushButton_result_cgx_clicked(bool)
   
   for (size_t i = 0; i < commands.size(); i++)
   {
-    CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    //CubitInterface::cmd(commands[int(i)].toStdString().c_str());
+    ccx_iface->cmd(commands[int(i)].toStdString());
   }
 }
 
