@@ -79,20 +79,35 @@ private:
   QVBoxLayout* boxLayout_material_cards1;
   QVBoxLayout* boxLayout_material_cards2;
   QVBoxLayout* boxLayout_material_cards3;
+  QVBoxLayout* boxLayout_materiallibrary1;
+  QVBoxLayout* boxLayout_materiallibrary2;
   QVBoxLayout* boxLayout_widget;
   QPushButton* pushButton_ok;
   QPushButton* pushButton_apply;
   QPushButton* pushButton_close;
   QPushButton* pushButton_new;
   QPushButton* pushButton_delete;
+  QPushButton* pushButton_rename;
+  QPushButton* pushButton_export;
   QPushButton* pushButton_add;
   QPushButton* pushButton_remove;
+  QPushButton* pushButton_library_import;
+  QPushButton* pushButton_library_new;
+  QPushButton* pushButton_library_delete;
+  QPushButton* pushButton_library_rename;
+  QPushButton* pushButton_library_new_group;
+  QPushButton* pushButton_library_delete_group;
+  QPushButton* pushButton_library_rename_group;
   QLabel* label_material;
   QLabel* label_available;
   QLabel* label_used;
+  QLabel* label_materiallibrary;
+  //QLabel* label_materiallibrary_material;
+  QLabel* label_materiallibrary_group;
   QTreeWidget* tree_material;
   QListWidget* list_available;
   QListWidget* list_used;
+  QTreeWidget* tree_materiallibrary;
   QListWidgetItem* list_elastic;
   QListWidgetItem* list_plastic;
   QListWidgetItem* list_density;
