@@ -14,7 +14,7 @@ MaterialManagementTable::MaterialManagementTable(QWidget* parent, QString group_
   
   //delegator = new QAbstractItemDelegate();
   //this->setItemDelegateForColumn(0,delegator);
-  this->setMinimumSize(750,200);
+  this->setMinimumSize(1100,240);
   //this->horizontalHeader()->setSectionResizeMode(QHeaderView::Stretch);
   
   // Signals
