@@ -88,3 +88,5 @@
 2024-11-16 working on material library
 2024-11-19 working on material library
 2024-11-21 working on material library
+2024-11-22 adding materials to the highlighting
+2024-11-22 working on material library gui
